Make correct alignment of files: 'dog-characteristic.styles.scss' and 'result.styles.scss'

--- a/src/pages/result/result.styles.scss
+++ b/src/pages/result/result.styles.scss
@@ -1,5 +1,6 @@
 .wrapper {
-    width: 90%;
-    margin: 5px auto;
-    margin-bottom: 50px;
+  width: 90%;
+  margin: 5px auto;
+  margin-bottom: 50px;
+  box-sizing: border-box;
 }
